--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 spring.application.name=backend-blogapp
 # PostgreSQL datasource configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/blogapp
+spring.datasource.url=jdbc:postgresql://database-1.c1au4wcg8qci.eu-north-1.rds.amazonaws.com:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=9238987348
+spring.datasource.driver-class-name=org.postgresql.Driver
 # Show SQL queries in console (optional)
 spring.jpa.show-sql=true
 
 # Hibernate DDL auto (none, update, create, create-drop)
 spring.jpa.hibernate.ddl-auto=update
-
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # JWT Configuration
 jwt.secret=LPqi0te33pkmVOBnXn4kTIfq0s43djOPJ1AMwwx9J8w=
 jwt.expiration=86400000
